test/netlist/error/input-as-output.bop
A(a) = a
where
  _ = id(a);
end where;
